<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E68A8"
    tools:context="com.alexandracastrillonvalencia.practica7login.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:typeface="serif"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:typeface="sans"/>
        <EditText
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="sans"
            android:textAlignment="center"
            android:id="@+id/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:typeface="sans"/>
        <EditText
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="sans"
            android:textAlignment="center"
            android:id="@+id/apellido"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:typeface="sans"/>
        <EditText
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="sans"
            android:textAlignment="center"
            android:id="@+id/correo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigotarj"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:typeface="sans"/>
        <EditText
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="sans"
            android:numeric="decimal"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="4"
            android:id="@+id/codigo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrase"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:typeface="sans"/>
        <EditText
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="sans"
            android:textAlignment="center"
            android:id="@+id/pass"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:id="@+id/inicio"/>
    </LinearLayout>
</ScrollView>
